--- a/App/Views/index/Index.phtml
+++ b/App/Views/index/Index.phtml
@@ -32,18 +32,29 @@
 
             <div class="row pt-5 pl-5 pr-5">
                 <div class="col pl-5 pr-5">
-                    <form action="">
+                    <form action="/autenticar" method="post">
                         <div class="row">
                             <div class="col">
-                                <input type="email" class="form-control" placeholder="E-mail">
+                                <input type="email" name="email" class="form-control" placeholder="E-mail">
                             </div>
                             <div class="col">
-                                <input type="password" class="form-control" placeholder="Senha">
+                                <input type="password" name="senha" class="form-control" placeholder="Senha">
                             </div>
                             <div class="col-auto">
                                 <button type="submit" class="btn btn-primary mb-2">Entrar</button>
                             </div>
                         </div>
+
+                        <?php if ($this->view->login == 'erro') { ?>
+                            <div class="row">
+                                <div class="col">
+                                    <small class="text text-danger text-center">
+                                        *E-mail e ou senha estão inválido(s)*
+                                    </small>
+                                </div>
+                            </div>
+                        <?php } ?>
+
                     </form>
                     <h2 class="mt-5 subtitle">Participe hoje do Twitter.</h2>
                     <a href="/inscreverse" class="btn btn-primary btn-block mb-2">inscrever-se</a>
