--- a/App/Views/app/timeline.phtml
+++ b/App/Views/app/timeline.phtml
@@ -94,7 +94,7 @@
                 <span class="quemSeguirTitulo">Quem Seguir</span>
                 <br>
                 <hr>
-                <a href="#" class="quemSeguirTxt">Procurar por pessoas conhecidas</a>
+                <a href="/quem_seguir" class="quemSeguirTxt">Procurar por pessoas conhecidas</a>
             </div>
         </div>
 
