--- a/App/Views/app/quemSeguir.phtml
+++ b/App/Views/app/quemSeguir.phtml
@@ -27,25 +27,33 @@
 
 					<div class="row mt-2 mb-2">
 						<div class="col mb-2">
-							<span class="perfilPainelNome">Nome do Usuário</span>
+							<span class="perfilPainelNome">
+								<?php echo $this->view->nomeUsuario['nome'] ?>
+							</span>
 						</div>
 					</div>
 
 					<div class="row mb-2">
 
 						<div class="col">
-							<span class="perfilPainelItem">Tweets</span><br />
-							<span class="perfilPainelItemValor">0</span>
+							<span class="perfilPainelItem">Tweets</span><br>
+							<span class="perfilPainelItemValor">
+								<?php echo $this->view->totalTweet['total_tweet'] ?>
+							</span>
 						</div>
 
 						<div class="col">
-							<span class="perfilPainelItem">Seguindo</span><br />
-							<span class="perfilPainelItemValor">0</span>
+							<span class="perfilPainelItem">Seguindo</span><br>
+							<span class="perfilPainelItemValor">
+								<?php echo $this->view->totalSeguindo['total_seguindo'] ?>
+							</span>
 						</div>
 
 						<div class="col">
-							<span class="perfilPainelItem">Seguidores</span><br />
-							<span class="perfilPainelItemValor">0</span>
+							<span class="perfilPainelItem">Seguidores</span><br>
+							<span class="perfilPainelItemValor">
+								<?php echo $this->view->totalSeguidores['total_seguidores'] ?>
+							</span>
 						</div>
 
 					</div>
