--- a/App/Views/app/timeline.phtml
+++ b/App/Views/app/timeline.phtml
@@ -6,14 +6,14 @@
                 Home
             </a>
 
-            <a href="/sair" class="menuItem">
-                <i class="fa-solid fa-power-off"></i>
-                Sair
-            </a>
-
             <a href="/perfil" class="menuItem">
                 <i class="fa-solid fa-user"></i>
                 Perfil
+            </a>
+
+            <a href="/sair" class="menuItem">
+                <i class="fa-solid fa-power-off"></i>
+                Sair
             </a>
 
             <img src="/img/twitter_logo.png" alt="Logo" class="menuIco">
@@ -26,7 +26,7 @@
 
         <div class="col-md-3">
 
-            <div class="perfil">
+            <div class="boxPadrao">
                 <div class="perfilTopo">
 
                 </div>
