--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,18 +108,30 @@ h2 {
   margin-left: -15px;
 }
 
-.perfil {
+.boxPadrao {
   border: 1px solid #e6ecf0;
   background: #fff;
   position: relative;
   margin-bottom: 10px;
   display: block;
   width: 100%;
+  border-radius: 10px;
 }
 
 .perfilTopo {
   height: 95px;
-  background-color: #1da1f2;
+  background-color: #0093e9;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.perfilTopoUsuario {
+  height: 150px;
+  background-color: #0093e9;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .perfilPainel {
@@ -162,6 +174,7 @@ h2 {
 
 .quemSeguir {
   border: 1px solid #e6ecf0;
+  border-radius: 10px;
   background: #fff;
   position: relative;
   margin-bottom: 10px;
@@ -194,6 +207,8 @@ h2 {
 
 .tweet:hover {
   background-color: #f5f8fa;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .heart {
@@ -213,4 +228,14 @@ h2 {
 
 .bordas {
   border: 1px solid red;
+}
+
+.inputItem {
+  border: none;
+  border-bottom: 1px solid #a2a3a3;
+  margin-bottom: 15px;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 15px;
+  outline: none;
 }
