--- a/App/Views/app/quemSeguir.phtml
+++ b/App/Views/app/quemSeguir.phtml
@@ -1,128 +1,131 @@
 <nav class="navbar navbar-expand-lg menu mb-5">
-	<div class="container">
-		<div class="navbar-nav">
-			<a href="/timeline" class="menuItem">
-				<i class="fa-solid fa-house"></i>
-				Home
-			</a>
+    <div class="container">
+        <div class="navbar-nav">
+            <a href="/timeline" class="menuItem">
+                <i class="fa-solid fa-house"></i>
+                Home
+            </a>
 
-			<a href="/perfil" class="menuItem">
-				<i class="fa-solid fa-user"></i>
-				Perfil
-			</a>
+            <a href="/perfil" class="menuItem">
+                <i class="fa-solid fa-user"></i>
+                Perfil
+            </a>
 
-			<a href="/sair" class="menuItem">
-				<i class="fa-solid fa-power-off"></i>
-				Sair
-			</a>
+            <a href="/sair" class="menuItem">
+                <i class="fa-solid fa-power-off"></i>
+                Sair
+            </a>
 
-			<img src="/img/twitter_logo.png" alt="Logo" class="menuIco">
-		</div>
-	</div>
+            <img src="/img/twitter_logo.png" alt="Logo" class="menuIco">
+        </div>
+    </div>
 </nav>
 
 <div class="container mt-5">
-	<div class="row pt-2">
+    <div class="row pt-2">
 
-		<div class="col-md-3">
+        <div class="col-md-3">
 
-			<div class="boxPadrao">
-				<div class="perfilTopo">
+            <div class="boxPadrao">
+                <div class="perfilTopo">
 
-				</div>
+                </div>
 
-				<div class="perfilPainel">
+                <div class="perfilPainel">
 
-					<div class="row mt-2 mb-2">
-						<div class="col mb-2">
-							<span class="perfilPainelNome">
-								<?php echo $this->view->nomeUsuario['nome'] ?>
-							</span>
-						</div>
-					</div>
+                    <div class="row mt-2 mb-2">
+                        <div class="col mb-2">
+                            <span class="perfilPainelNome">
+                                <?php echo $this->view->infoUsuario['nome'] ?>
+                            </span>
+                        </div>
+                    </div>
 
-					<div class="row mb-2">
+                    <div class="row mb-2">
 
-						<div class="col">
-							<span class="perfilPainelItem">Tweets</span><br>
-							<span class="perfilPainelItemValor">
-								<?php echo $this->view->totalTweet['total_tweet'] ?>
-							</span>
-						</div>
+                        <div class="col">
+                            <span class="perfilPainelItem">Tweets</span><br>
+                            <span class="perfilPainelItemValor">
+                                <?php echo $this->view->totalTweet['total_tweet'] ?>
+                            </span>
+                        </div>
 
-						<div class="col">
-							<span class="perfilPainelItem">Seguindo</span><br>
-							<span class="perfilPainelItemValor">
-								<?php echo $this->view->totalSeguindo['total_seguindo'] ?>
-							</span>
-						</div>
+                        <div class="col">
+                            <span class="perfilPainelItem">Seguindo</span><br>
+                            <span class="perfilPainelItemValor">
+                                <?php echo $this->view->totalSeguindo['total_seguindo'] ?>
+                            </span>
+                        </div>
 
-						<div class="col">
-							<span class="perfilPainelItem">Seguidores</span><br>
-							<span class="perfilPainelItemValor">
-								<?php echo $this->view->totalSeguidores['total_seguidores'] ?>
-							</span>
-						</div>
+                        <div class="col">
+                            <span class="perfilPainelItem">Seguidores</span><br>
+                            <span class="perfilPainelItemValor">
+                                <?php echo $this->view->totalSeguidores['total_seguidores'] ?>
+                            </span>
+                        </div>
 
-					</div>
+                    </div>
 
-				</div>
-			</div>
+                </div>
+            </div>
 
-		</div>
+        </div>
 
-		<div class="col-md-6">
+        <div class="col-md-6">
 
-			<div class="row mb-2">
-				<div class="col">
-					<div class="card boxPadrao">
-						<div class="card-body">
-							<form action="/quem_seguir" method="get">
-								<div class="input-group mb-3">
-									<input type="text" name="pesquisarPor" class="form-control" placeholder="Quem você está procurando?">
-									<div class="input-group-append">
-										<button class="btn btn-primary" type="submit">Procurar</button>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
+            <div class="row mb-2">
+                <div class="col">
+                    <div class="card boxPadrao">
+                        <div class="card-body">
+                            <form action="/quem_seguir" method="get">
+                                <div class="input-group mb-3">
+                                    <input type="text" name="pesquisarPor" class="form-control"
+                                        placeholder="Quem você está procurando?">
+                                    <div class="input-group-append">
+                                        <button class="btn btn-primary" type="submit">Procurar</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-			<?php foreach ($this->view->usuarios as $indexe_arr => $usuario) { ?>
-				<div class="row mb-2">
-					<div class="col">
-						<div class="card boxPadrao">
-							<div class="card-body">
-								<div class="row">
-									<div class="col-md-6">
-										<?php echo $usuario['nome'] . '<br>' ?>
-									</div>
+            <?php foreach ($this->view->usuarios as $indexe_arr => $usuario) { ?>
+            <div class="row mb-2">
+                <div class="col">
+                    <div class="card boxPadrao">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <?php echo $usuario['nome'] . '<br>' ?>
+                                </div>
 
-									<div class="col-md-6 d-flex justify-content-end">
-										<div>
-											<?php if ($usuario['bool_seguindo'] == 0) { ?>
-												<a href="/acao?acao=seguir&id_usuario=<?php echo $usuario['id'] ?>" class="btn btn-success">
-													Seguir
-												</a>
-											<?php } ?>
+                                <div class="col-md-6 d-flex justify-content-end">
+                                    <div>
+                                        <?php if ($usuario['bool_seguindo'] == 0) { ?>
+                                        <a href="/acao?acao=seguir&id_usuario=<?php echo $usuario['id'] ?>"
+                                            class="btn btn-success">
+                                            Seguir
+                                        </a>
+                                        <?php } ?>
 
-											<?php if ($usuario['bool_seguindo'] == 1) { ?>
-												<a href="/acao?acao=deixar_de_seguir&id_usuario=<?php echo $usuario['id'] ?>" class="btn btn-danger">
-													Deixar de seguir
-												</a>
-											<?php } ?>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+                                        <?php if ($usuario['bool_seguindo'] == 1) { ?>
+                                        <a href="/acao?acao=deixar_de_seguir&id_usuario=<?php echo $usuario['id'] ?>"
+                                            class="btn btn-danger">
+                                            Deixar de seguir
+                                        </a>
+                                        <?php } ?>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-			<?php } ?>
+            <?php } ?>
 
-		</div>
-	</div>
+        </div>
+    </div>
 </div>
