--- a/App/Views/app/timeline.phtml
+++ b/App/Views/app/timeline.phtml
@@ -36,7 +36,7 @@
                     <div class="row mt-2 mb-2">
                         <div class="col mb-2">
                             <span class="perfilPainelNome">
-                                <?php echo $this->view->nomeUsuario['nome'] ?>
+                                <?php echo $this->view->infoUsuario['nome'] ?>
                             </span>
                         </div>
                     </div>
