--- a/public/css/style.css
+++ b/public/css/style.css
@@ -154,6 +154,15 @@ h2 {
   overflow: hidden;
   transition: color 0.15s ease-in-out;
 }
+.perfilPainelItemBiografica {
+  color: #657786;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 0.02em;
+  line-height: 16px;
+  overflow: hidden;
+  transition: color 0.15s ease-in-out;
+}
 
 .perfilPainelItemValor {
   display: block;
@@ -202,7 +211,6 @@ h2 {
 .tweet {
   padding: 15px;
   border-bottom: 1px solid #e6ecf0;
-  cursor: pointer;
 }
 
 .tweet:hover {
@@ -221,9 +229,11 @@ h2 {
 
 .comments:hover {
   font-size: 20px;
+  cursor: pointer;
 }
 .heart:hover {
   font-size: 20px;
+  cursor: pointer;
 }
 
 .bordas {
@@ -240,6 +250,17 @@ h2 {
   outline: none;
 }
 
+.inputItemTimeline {
+  border: none;
+  border-bottom: 1px solid #a2a3a3;
+  margin-bottom: 15px;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 15px;
+  outline: none;
+  background: #fff;
+  cursor: pointer;
+}
 .info {
   color: #657786;
   font-size: 13px;
