--- a/App/Views/app/timeline.phtml
+++ b/App/Views/app/timeline.phtml
@@ -113,13 +113,13 @@
                                 </a>
                             </div>
                             <div class="d-flex align-items-center">
-                                <i class="fa-brands fa-tiktok fa-lg" style="color:  #000;"></i>
+                                <i class="fa-brands fa-tiktok fa-lg" style="    color:  #000;"></i>
                                 <a href="<?php echo $this->view->infoUsuario['tiktok'] ?>">
                                     <input class="col inputItem inputItemTimeline" type="text" value="<?php echo $this->view->infoUsuario['tiktok'] ?>" placeholder="Tiktok" disabled>
                                 </a>
                             </div>
                             <div class="d-flex align-items-center">
-                                <i class="fa-solid fa-link fa-lg"></i>
+                                <i class="fa-solid fa-square-arrow-up-right fa-lg"></i>
                                 <a href="<?php echo $this->view->infoUsuario['outros_links'] ?>">
                                     <input class="col inputItem inputItemTimeline" type="text" value="<?php echo $this->view->infoUsuario['outros_links'] ?>" placeholder="Outros" disabled>
                                 </a>
@@ -136,7 +136,8 @@
             <div class="row mb-2">
                 <div class="col tweetBox">
                     <form action="/tweet" method="post">
-                        <textarea class="form-control" name="tweet" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <textarea class="form-control mb-2" name="tweet" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <span class="info">Total aceito de 200 caracteres</span>
                         <div class="col mt-2 d-flex justify-content-end">
                             <button type="submit" class="btn btn-primary">Tweet</button>
                         </div>
@@ -157,13 +158,15 @@
                         </p>
 
                         <p>
-                            <?php echo $tweet['tweet'] ?>
+                            <?php echo nl2br($tweet['tweet']) ?>
                         </p>
-                        <br>
 
-                        <i class="fa-solid fa-heart mr-2 heart"></i>
-                        <i class="fa-solid fa-comments comments"></i>
-
+                        <div class="row mt-3">
+                            <div class="col">
+                                <i class="fa-solid fa-heart mr-2 heart"></i>
+                                <i class="fa-solid fa-comments comments"></i>
+                            </div>
+                        </div>
                         <?php if ($tweet['id_usuario'] == $_SESSION['id']) { ?>
 
                             <form action="/remove_tweet" method="post">
@@ -178,6 +181,40 @@
                     </div>
                 </div>
             <?php } ?>
+
+            <?php if ($this->view->totalPag != 0) { ?>
+
+                <div class="row mt-3">
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination">
+                            <li class="page-item">
+                                <a class="page-link" href="?pagina=1" aria-label="Previous">
+                                    <span aria-hidden="true">Primeira</span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            </li>
+
+                            <?php for ($i = 1; $i <= $this->view->totalPag; $i++) { ?>
+
+                                <li class="page-item <?php echo $this->view->pagAtiva == $i ? 'active' : '' ?>">
+                                    <a class="page-link active " href="?pagina=<?php echo $i ?>">
+                                        <?php echo $i ?>
+                                    </a>
+                                </li>
+                            <?php } ?>
+
+                            <li class="page-item">
+                                <a class="page-link" href="?pagina=<?php echo $this->view->totalPag ?>" aria-label="Next">
+                                    <span aria-hidden="true">Ultima</span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+
+            <?php } ?>
+
         </div>
 
         <div class="col-md-3">
